--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "goldenera-scan",
   "private": true,
   "type": "module",
+  "version": "0.0.1",
   "scripts": {
     "start": "node --env-file=.env .output/server/index.mjs",
     "dev": "vite dev --port 3000",
