--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 NODE_API_URL="NODE_API_URL"
 NODE_API_KEY="NODE_API_KEY"
 
-VITE_APP_NAME="GoldenEra Scan"
+APP_NAME="GoldenEra Scan"
+
+LISTEN_PORT=3000
